--- a/index.html
+++ b/index.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Twitter</title>
 </head>
 <body>
+
+    <!-- Nav Bar -->
+    <div class="nav-bar">
+        <div class="logo">
+            
+        </div>
+        <div class="nav-bar-icons">
+            <i class="material-icons">home</i>
+            Home
+            <i class="material-icons">tag</i>
+            Explore
+            <i class="material-icons">notifications_none</i>
+            Notifications
+            <i class="material-icons">mail_outline</i>
+            Messages
+            <i class="material-icons">bookmark_border</i>
+            Bookmarks
+            <i class="material-icons">list_alt</i>
+            Lists
+            <i class="material-icons">person_outline</i>
+            Profile
+            <i class="material-icons">more</i>
+            More
+        </div>
+
+    </div>
     
+
+    <div class="mainbody">
+
+    </div>
+
+
+
+    <div class="trending-bar">
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
