added mainbody container

--- a/index.html
+++ b/index.html
@@ -71,14 +71,11 @@
                 </div>
             </div>
         </div>
-        
-
-
     </div>
     
 
     <div class="mainbody">
-
+        <h6>Home</h6>
     </div>
 
 
