--- a/index.html
+++ b/index.html
@@ -274,6 +274,25 @@
 
 
         <div class="trending-bar">
+            <div class="searchbar">
+                <form class="search">
+                    <i class="material-icons">search</i>
+                    <input type="text" placeholder="Search Twitter">
+                </form>
+            </div>
+            <div class="trends">
+                <div class="trends-header">
+                    <h5>Trends for you</h5>
+                    <i class="material-icons">settings</i>
+                </div>
+                <div class="trending-news">
+
+                </div>
+
+            </div>
+            <div class="who-to-follow">
+
+            </div>
 
         </div>
 
