trending bar completed

--- a/index.html
+++ b/index.html
@@ -281,17 +281,61 @@
                 </form>
             </div>
             <div class="trends">
-                <div class="trends-header">
-                    <h5>Trends for you</h5>
-                    <i class="material-icons">settings</i>
+                <div class="trend">
+                    <div class="trends-header">
+                        <h5>Trends for you</h5>
+                        <i class="material-icons">settings</i>
+                    </div>
+                    <div class="trending-news">
+                        <div class="news">
+                            <div class="news-profile">
+                                <div class="news-info">
+                                    <p>Trending in South Africa</p>
+                                    <h6>#TransferDrama</h6>
+                                    <p>10,000 Tweets</p>
+                                </div>
+                                <i class="material-icons">more_horiz</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="trending-news">
+                        <div class="news">
+                            <div class="news-profile">
+                                <div class="news-info">
+                                    <p>Trending in USA</p>
+                                    <h6>#TransferDrama</h6>
+                                    <p>500,000 Tweets</p>
+                                </div>
+                                <i class="material-icons">more_horiz</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="trending-news">
+                        <div class="news">
+                            <div class="news-profile">
+                                <div class="news-info">
+                                    <p>Trending in Italy</p>
+                                    <h6>#TransferDrama</h6>
+                                    <p>900,000 Tweets</p>
+                                </div>
+                                <i class="material-icons">more_horiz</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="showmore-trend">
+                        <p>Show more</p>
+                    </div>
                 </div>
-                <div class="trending-news">
-
-                </div>
-
             </div>
-            <div class="who-to-follow">
 
+            <div class="who-to-follow">
+                <div class="follow-header">
+                    <h6>Who to follow</h6>
+                </div>
+                <div class="who-profile">
+                    <div class="profile-pic"></div>
+                    <button>Follow</button>
+                </div>
             </div>
 
         </div>
